{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 29,
  "lineage": "abde5186-5d48-e250-ae82-d7b67ca64d32",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697735985935:internet-gateway/igw-084b9b28342703008",
            "id": "igw-084b9b28342703008",
            "owner_id": "697735985935",
            "tags": {
              "Name": "Internet Gateway"
            },
            "tags_all": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-06ca42034b2056499"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697735985935:route-table/rtb-0aa43ff2fbeb6d5c4",
            "id": "rtb-0aa43ff2fbeb6d5c4",
            "owner_id": "697735985935",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-084b9b28342703008",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT for Subnet"
            },
            "tags_all": {
              "Name": "RT for Subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ca42034b2056499"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_gateway",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "first",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047dddc7f86a4ecfc",
            "route_table_id": "rtb-0aa43ff2fbeb6d5c4",
            "subnet_id": "subnet-00414d33c24a62d9b"
          },
          "dependencies": [
            "aws_internet_gateway.my_gateway",
            "aws_route_table.web_rt",
            "aws_subnet.subnet_a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "second",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0515fea5d652201fa",
            "route_table_id": "rtb-0aa43ff2fbeb6d5c4",
            "subnet_id": "subnet-0f3488774201f5e3f"
          },
          "dependencies": [
            "aws_internet_gateway.my_gateway",
            "aws_route_table.web_rt",
            "aws_subnet.subnet_b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697735985935:security-group/sg-031937c25ac79043d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-031937c25ac79043d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20240226094655386900000001",
            "name_prefix": "terraform-",
            "owner_id": "697735985935",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06ca42034b2056499"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697735985935:subnet/subnet-00414d33c24a62d9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00414d33c24a62d9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "697735985935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06ca42034b2056499"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697735985935:subnet/subnet-0f3488774201f5e3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3488774201f5e3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "697735985935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06ca42034b2056499"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697735985935:vpc/vpc-06ca42034b2056499",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08fa35460dcbf7dd7",
            "default_route_table_id": "rtb-03eb4848eda75ea35",
            "default_security_group_id": "sg-08c63a38b32360c08",
            "dhcp_options_id": "dopt-068cef3f7549271dc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06ca42034b2056499",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03eb4848eda75ea35",
            "owner_id": "697735985935",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}